src/Pages/UserProfile/UserProfile.module.css
/* ---------- */
.profileWrapper {
  background-color: #23232b;
  padding: var(--main-padding);
  height: 400vh;
}

.profileContainer {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: auto;
  max-height: 100vh;
  border: 2px solid #b0aac2;
  background: #23232b;
}

/* -------------------------IMAGE CONTAINER------------------------- */
.imageContainer {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 50%;
  padding: 20px;
  height: 50%;
  gap: 1rem;
}

.profileImage {
  width: 300px;
  height: 300px;
  border-radius: 50%;
  object-fit: cover;
  border: 4px solid #7c5ebf;
  box-shadow: 0 0 12px #b0aac2;
}

/* -------------------------ADMIN AVATAR ------------------------- */
.adminAvatar {
  border: 4px solid #ff2a2a;
  box-shadow: 0 0 18px 4px #ff2a2a, 0 0 12px #b0aac2;
}

/* -------------------------CHARACTER INFO------------------------- */
.characterInfo {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  width: 100%;
  height: 300vh;
}

.characterDetailsContainer {
  margin: 0 20px;
  padding: 20px;
  display: flex;
  flex-direction: row;
  align-items: center;
  height: auto;
  border: 2px solid #7c5ebf;
  background: #23232b;
  color: #b0aac2;
  gap: 5rem;
  width: 100%;
}

/* -------------------------PROFILE HTML CONTAINER------------------------- */
.profileHtmlContainer {
  display: grid;
  grid-template-columns: 4fr 1fr;
  gap: 1rem;
  justify-content: center;
  width: 100%;
  height: 300vh;
  padding: 1rem;
}
.profileIframe {
  width: 100%;
  height: 100%;
  border: none;
  overflow-y: auto;
  border-radius: 10px;
}
.profileTextContainer {
  color: #b0aac2;
}
/* -------------------------RESPONSIVE------------------------- */
@media screen and (max-width: 1000px) {
  .profileWrapper {
    display: flex;
    flex-direction: column;
    padding: 1rem;
  }
  .profileContainer {
    display: flex;
    flex-direction: column;
  }

  .characterDetailsContainer {
    width: 80%;
    margin: 10px auto;
    flex-direction: row;
    gap: 2rem;
    border-radius: 10px;
  }
  .profileHtmlContainer {
    display: flex;
  }
  .chatContainer {
    display: none;
  }
}

